--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  background-color: whitesmoke;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.Login{
+  border: 1px solid #555;
+  width: 300px;
+  height: 60px;
+  border-radius: 10px;
+}
+/* .head{
+  text-align: center;
+} */
+.log{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+gap: 50px;
+margin-top: 200px;
+
+}
+#signInDiv{
+  margin-left: 15px;
+  margin-top:10px ;
 }
